k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: 757905896588.dkr.ecr.ap-south-1.amazonaws.com/chatapp-backend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5001
