k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: 757905896588.dkr.ecr.ap-south-1.amazonaws.com/chatapp-frontend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80
